- Implementa documentação para create product
